--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "tiny-emitter": "^2.1.0",
+    "vee-validate": "^4.5.8",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-beta.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -35,7 +38,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^7.0.0",
     "jest": "^27.0.5",
     "lint-staged": "^11.1.2",
     "postcss": "^8.4.16",
